[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Card.gd" type="Script" id=1]
[ext_resource path="res://cards/Card1.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50.1292, 49.9316 )

[node name="Card" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "unflip"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FirstFlipTimer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true
autostart = true
[connection signal="input_event" from="." to="." method="_on_Card_input_event"]
[connection signal="timeout" from="FirstFlipTimer" to="." method="_on_FirstFlipTimer_timeout"]
